fixed explore assets page spacing inconsistency between the loading state and the state of displaying assets

--- a/src/styles/ExploreAssetsPage.scss
+++ b/src/styles/ExploreAssetsPage.scss
@@ -24,7 +24,6 @@
 		font-weight: bold;
 		font-family: 'Roboto';
 		color: #125ac4;
-		left: 18px;
 	}
 
 	&__message-no-elements{
